--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cp node_modules/jquery/dist/jquery.js lib/ && cp node_modules/normalize.css/normalize.css lib/"
+    "postinstall": "cp node_modules/jquery/dist/jquery.js lib/ && cp node_modules/normalize.css/normalize.css lib/",
+    "build:js": "webpack",
+    "watch:js": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
