--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-react": "^6.16.0",
+    "event-emitter": "^0.3.4",
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
