--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-react": "^6.16.0",
     "event-emitter": "^0.3.4",
+    "eventemitter3": "^2.0.2",
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
