--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "scaffold",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cp node_modules/jquery/dist/jquery.js lib/ && cp node_modules/normalize.css/normalize.css lib/",
     "build:js": "webpack",
+    "dev": "npm run watch:js & npm start",
     "watch:js": "webpack --watch"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "babel-preset-react": "^6.16.0",
     "event-emitter": "^0.3.4",
     "eventemitter3": "^2.0.2",
+    "express": "^4.14.0",
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
