--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cp node_modules/jquery/dist/jquery.js lib/ && cp node_modules/normalize.css/normalize.css lib/",
     "build:js": "webpack",
+    "watch:js": "webpack --watch",
     "dev": "npm run watch:js & npm start",
-    "watch:js": "webpack --watch"
+    "postinstall": "cp node_modules/normalize.css/normalize.css lib/"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
     "webpack": "^1.13.3"
   }
 }
