--- a/marvel-app/package.json
+++ b/marvel-app/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "event-emitter": "^0.3.4",
     "eventemitter3": "^2.0.2",
     "express": "^4.14.0",
